# public-quicktick-api

./: .dockerignore  .gitignore  404.html  Cargo.toml  Dockerfile  README.md  documentation.html
migrations/: 20230731101210_main.sql  20230820082016_salt.sql  20230820100519_board.sql  20230820140647_specialboard.sql
src/: helper.rs  main.rs  models.rs  websocket.rs
src/https/: get.rs
src/https/delete/: board.rs  task.rs  user.rs
src/https/get/: board.rs  task.rs
src/https/patch/: board.rs  task.rs  user.rs
src/https/post/: board.rs  task.rs  user.rs
tests/: quick-dev.rs
