[package]
name = "quicktick-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "quicktick-api"
path = "src/main.rs"

[dependencies]
# add headers feature to axum
axum = { version = "0.6.19", features = ["headers", "ws"] }
tower-http = { version = "0.4.3", features = ["fs", "cors"] }
axum-extra = "0.7.7"
tower = "0.4.13"

http = "0.2.9"

# rand
rand = "0.8.5"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
chrono = { version = "0.4.26", features = ["serde"] }

# async runtime
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# database
sqlx = { version = "0.7.1", features = [
  "mysql",
  "runtime-tokio",
  "tls-rustls",
] }
url = "2.4.0"
dotenv = "0.15.0"
tower-cookies = "0.9.0"
# password hashing
bcrypt = "0.15.0"
futures-util = "0.3.28"

[dev-dependencies]
uuid = { version = "1.4.1", features = ["v4"] }
# error handling
anyhow = "1"
#  endpoint testing
httpc-test = "0.1.5"
reqwest = { version = "0.11.18", features = ["json"] }
